# ProjetoFinalAME

./: .gitignore  Notebook_Entregavel2_FireMLP.ipynb  README.md  data
notebook/: notebook.ipynb
pico/: CMakeLists.txt  README.txt
pico/model-parameters/: model_metadata.h  model_variables.h
pico/source/: main.cpp
pico/tflite-model/: tflite_learn_1037875_4_compiled.cpp  tflite_learn_1037875_4_compiled.h
